tests/baselines/reference/unusedLocalsInMethod2.errors.txt
tests/cases/compiler/unusedLocalsInMethod2.ts(3,13): error TS6133: 'x' is declared but never used.
tests/cases/compiler/unusedLocalsInMethod2.ts(3,16): error TS6133: 'y' is declared but never used.


==== tests/cases/compiler/unusedLocalsInMethod2.ts (2 errors) ====
    class greeter {
        public function1() {
            var x, y = 10;
                ~
!!! error TS6133: 'x' is declared but never used.
                   ~
!!! error TS6133: 'y' is declared but never used.
            y++;
        }
    }